--- a/views/register.slim
+++ b/views/register.slim
@@ -1,3 +1,5 @@
+h2 Regestrera dig här!
+
 form action="users/new" method="post"
     input type="text" name="username" placeholder="Användarnamn"
     input type="password" name="password" placeholder="Lösenord"
