--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,7 +9,6 @@ html lang="en"
     nav
       a href="/" Register
       a href="/showlogin" Login
-      a href="/annons" Lägg till en annons!
-    h1 Welcome to Todos!
+    h2 Hej!
 
     == yield
