--- a/views/annons.slim
+++ b/views/annons.slim
@@ -1,6 +1,6 @@
 h2 Lägg till en annons
 
-form action="annons/new" method="post"
+form action="/annons/new" method="post"
     input type="text" name="rubriken" placeholder="Rubrik" 
     input type="text" name="bio" placeholder="Beskrivning"
     input type="text" name="pris" placeholder="Pris"
