--- a/views/annons.slim
+++ b/views/annons.slim
@@ -1,8 +1,2 @@
-h2 Lägg till en annons
+h2 Här är alla anonnser som ligger ute just nu!
 
-form action="/annons/new" method="post"
-    input type="text" name="rubriken" placeholder="Rubrik" 
-    input type="text" name="bio" placeholder="Beskrivning"
-    input type="text" name="pris" placeholder="Pris"
-    input type="file" name="file" placeholder="Lägg till en bild"
-    input type="submit" value="Skapa en ny annons!"/
