--- a/views/layout.slim
+++ b/views/layout.slim
@@ -3,7 +3,7 @@ html lang="en"
   head
     meta charset="UTF-8"/
     meta name="viewport" content="width=device-width, initial-scale=1.0"/
-    link rel="stylesheet" href="/css/style.css"/
+    link rel="stylesheet" href="/css/styles.css"/
     title Document
   body
     nav
@@ -13,3 +13,4 @@ html lang="en"
     h2 Hej!
 
     == yield
+
