--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,23 @@
 nav {
     margin-left: 50px;
 }
+
+body {
+    background-color: whitesmoke;
+}
+
+.registrera {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+h2 {
+    color: black;
+    text-align: center;
+}
+
+.box_annons{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
