--- a/views/annonser.slim
+++ b/views/annonser.slim
@@ -1,7 +1,18 @@
 h2 Här är alla anonnser som ligger ute just nu!
 
 
-a href="/showlogin" Login
-
 - annonser.each do |annonser|
-    p = annonser["content"]
+    .box_annons
+        p = annonser["rubrik"]
+        p = annonser["bio"]
+        p = annonser["pris"]
+        p = annonser["image"]
+
+
+a href="/annons/new" Lägg till annonser
+
+form action="/annons/uppdatera" method="post"
+    input type="text" name="nyrubrik" placeholder="Skriv den nya rubriken"
+    input type="text" name="nybio" placeholder="Ändra beskrivningen" 
+    input type="text" name="nyttpris" placeholder="Nytt pris"
+    input type="submit" value="Uppdatera annonsen"/
