--- a/views/annonser.slim
+++ b/views/annonser.slim
@@ -6,8 +6,7 @@ h2 Här är alla anonnser som ligger ute just nu!
         p = annonser["rubrik"]
         p = annonser["bio"]
         p = annonser["pris"]
-        a href="/public/uploads#{annonser["image"]}"
-        
+        img src="#{annonser["image"]}"/
 
 
 a href="/annons/new" Lägg till annonser
