--- a/views/edit.slim
+++ b/views/edit.slim
@@ -1,3 +1,17 @@
+annonser.each do |annonser|
+    .box_annons
+        p = annonser["rubrik"]
+        p = annonser["bio"]
+        p = annonser["pris"]
+        img src="#{annonser["image"]}"/
+        form method="POST" action="/redigeraannons"
+            input type="submit" value="Uppdatera annonsen"/
+        form method="POST" action="/delete"
+            input type="submit" value="Radera annonsen"/
+        form method="POST" action="/redigera"
+            input type="submit" value="Redigera annonsen"
+
+
 form method="post" action="updateraannons"
     input type="text" name="rubriken" placeholder="Ändra rubriken"
     input type="text" name="bio" placeholder="Ändra beskrivningen på annonsen"
