--- a/views/index.slim
+++ b/views/index.slim
@@ -7,12 +7,13 @@ h2 Här är alla anonnser som ligger ute just nu!
         p = annonser["bio"]
         p = annonser["pris"]
         img src="#{annonser["image"]}"/
-        form method="POST" action="/delete"
+        a href="/annons/#{annonser['id']}/edit" Uppdatera
+        form method="POST" action="/annonser/#{annonser['id']}/delete"
             input type="submit" value="Radera annonsen"/
-        form method="POST" action="/update"
-            input type="submit" value="Redigera annonsen"
 
 
 a href="/annons/new" Lägg till annonser
+
+
 
 
